--- a/todo.txt
+++ b/todo.txt
@@ -9,10 +9,32 @@ legg til advarsel å forandre permalink struktur med å legge til categori - sli
 legge til <picture> i content filter for responsive design eller ikke: bare bruk løsningen med width 100% height auto
 
 
-gjøre email greiene tilslutt
+gjøre email greiene tilslutt (må være i plugin)
 
 
 legge til feature for privacy popup
 
 
 bruke wp cache api
+
+
+version compare
+/**
+ * Twenty Fifteen only works in WordPress 4.1 or later.
+ */
+if ( version_compare( $GLOBALS['wp_version'], '4.1-alpha', '<' ) ) {
+	require get_template_directory() . '/inc/back-compat.php';
+}
+
+
+set_search i functions er disabled.. vil at den skal searche for posts og pages (test at den gjør det uten filter i functions)
+
+
+html lang="'.get_locale().'" legg til customizer for lang så man ka engelsk wordpress admin med "norsk" fremside
+
+
+add by js "to top" button
+
+add to customizer -> menu ability to make navbar sticky or show when scrolled up
+
+bruke meta box title og excerpt til internal search results
