--- a/todo.txt
+++ b/todo.txt
@@ -2,7 +2,7 @@ bugs:
 show navbar search
 hide go up button
 privacy pop up container dekker over 
-
+seo meta box: change meta description to textarea
 
 
 
